--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="wrapper">
-    <h2 id="question">Hetal Date pe chaloge??? </h2>
+    <h2 id="question">Please Maaf kardo Neeta!!!??? </h2>
     <img
          id="gif"
          alt="gif"
